[package]
name = "cryptomus"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2", "rustls-tls", "charset", "gzip", "brotli", "zstd", "hickory-dns",
    "json"
] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rust_decimal = "1"
hex = "0.4"
base64 = "0.22"
md-5 = "0.10"

[dev-dependencies]
anyhow = "1"
rust_decimal = { version = "1", features = ["macros"] }
